documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef short int SHORT;
typedef short int * LPSHORT;
typedef long int * LPLONG;


/**
*
*  Internal functions used by the PC1553-3 Driver.
*
**/

P42W32API USHORT __stdcall DRV429_Active(USHORT value,HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocCycle(INT numframes,HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocFilt(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocFrame(INT nummsgs,HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocGap(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocHeader(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocHeap(INT size,HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocLabelTable(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocMsg(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AllocSDITable(HCARD handleval);

P42W32API USHORT __stdcall DRV429_AsciiToMant(LPSTR str,LPLONG mant,LPSHORT exp);

P42W32API USHORT __stdcall DRV429_BrdNum(USHORT brdnum,HCARD handleval);

P42W32API VOID __stdcall DRV429_BrdStat(USHORT value,HCARD handleval);

P42W32API BOOL __stdcall DRV429_Check(HCARD handleval);

P42W32API USHORT __stdcall DRV429_CheckChan(HCARD handleval);

P42W32API VOID __stdcall DRV429_CLI(HCARD handleval);

P42W32API VOID __stdcall DRV429_Close(HCARD handleval);

P42W32API VOID __stdcall DRV429_ClrCtrInt(HCARD handleval);

P42W32API VOID __stdcall DRV429_ClrDMA(HCARD handleval);

P42W32API VOID __stdcall DRV429_ClrHostInt(HCARD handleval);

P42W32API USHORT __stdcall DRV429_ClrMsgFilt(HCARD handleval);

P42W32API SHORT __stdcall DRV429_Comm(USHORT command,USHORT count,LPUSHORT value,HCARD handleval);

P42W32API SHORT __stdcall DRV429_CommPoll(USHORT command,USHORT count,LPUSHORT value,HCARD handleval);

P42W32API ULONG __stdcall DRV429_CreateMsg(HCARD handleval);

P42W32API ULONG __stdcall DRV429_DecRdData(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_DecRdErr(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_DecRdOvf(USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall DRV429_DecRdSeq(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_DecRdSrq(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_DecWrCtrl(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_DecWrReset(USHORT value,USHORT channel,HCARD handleval);

P42W32API LPSTR __stdcall DRV429_DfltMsg(USHORT index);

P42W32API ULONG __stdcall DRV429_Div(ULONG diva,ULONG divb);

P42W32API USHORT __stdcall DRV429_ElapseClk(USHORT value,HCARD handleval);

P42W32API USHORT __stdcall DRV429_EncRdOvf(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_EncRdSrq(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_EncWrCtrl(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_EncWrData(ULONG value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_EncWrGap(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_EncWrReset(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall DRV429_EncWrSeq(ULONG value,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_Error(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_ExpandMant(LPLONG mant,LPSHORT exp);

P42W32API INT __stdcall DRV429_ExpCRC(INT version);

P42W32API USHORT __stdcall DRV429_Extern(USHORT value,HCARD handleval);

P42W32API VOID __stdcall DRV429_FileClose(INT handle);

P42W32API BOOL __stdcall DRV429_FileErr(VOID);

P42W32API VOID __stdcall DRV429_FileErrClr(VOID);

P42W32API VOID __stdcall DRV429_FileErrSet(VOID);

P42W32API INT __stdcall DRV429_FileOpenRead(LPCSTR filename);

P42W32API INT __stdcall DRV429_FileOpenWrite(LPCSTR filename);

P42W32API BOOL __stdcall DRV429_FileRead(INT handle,LPVOID buffer,USHORT count);

P42W32API BOOL __stdcall DRV429_FileSeek(INT handle,ULONG offset);

P42W32API ULONG __stdcall DRV429_FileTell(INT handle);

P42W32API BOOL __stdcall DRV429_FileWrite(INT handle,LPVOID buffer,USHORT count);

P42W32API USHORT __stdcall DRV429_Free(HCARD handleval);

P42W32API VOID __stdcall DRV429_FreeDrv(VOID);

P42W32API VOID __stdcall DRV429_FreeHeap(HCARD handleval);

P42W32API VOID __stdcall DRV429_Gate(USHORT command,HCARD handleval);

P42W32API ULONG __stdcall DRV429_GetBCDData(ULONG msg,USHORT msb,USHORT lsb);

P42W32API ULONG __stdcall DRV429_GetBCDMant(ULONG msg,USHORT sigdig);

P42W32API USHORT __stdcall DRV429_GetBCDSign(ULONG msg);

P42W32API USHORT __stdcall DRV429_GetBCDSSM(ULONG msg);

P42W32API VOID __stdcall DRV429_GetBCDVal(LPSTR buf,ULONG msg,USHORT sigdig,LPSTR resolstr);

P42W32API ULONG __stdcall DRV429_GetBNRData(ULONG msg,USHORT msb,USHORT lsb,USHORT twos);

P42W32API ULONG __stdcall DRV429_GetBNRMant(ULONG msg,USHORT sigbit);

P42W32API USHORT __stdcall DRV429_GetBNRSign(ULONG msg);

P42W32API USHORT __stdcall DRV429_GetBNRSSM(ULONG msg);

P42W32API VOID __stdcall DRV429_GetBNRVal(LPSTR buf,ULONG msg,USHORT sigbit,LPSTR resolstr);

P42W32API ULONG __stdcall DRV429_GetFilt(USHORT labelval,USHORT sdival,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall DRV429_GetFldData(ULONG msgval);

P42W32API USHORT __stdcall DRV429_GetFldLabel(ULONG msgval);

P42W32API INT __stdcall DRV429_GetFldParBit(ULONG msgval);

P42W32API INT __stdcall DRV429_GetFldParity(ULONG msgval);

P42W32API INT __stdcall DRV429_GetFldSDI(ULONG msgval);

P42W32API ULONG __stdcall DRV429_GetFldValue(ULONG msgval,INT startbit,INT endbit);

P42W32API ULONG __stdcall DRV429_GetGap(USHORT index,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall DRV429_GetMsg(USHORT index,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_GetMsgCnt(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall DRV429_GetVersion(HCARD handleval);

P42W32API VOID __stdcall DRV429_Halt(HCARD handleval);

P42W32API ERRVAL __stdcall DRV429_HandleInit(VOID);

P42W32API BOOL __stdcall DRV429_HandleOkay(HCARD handleval);