documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB


    Public Declare Function DRV429_Active Lib "P42W32.DLL" Alias "_DRV429_Active@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocCycle Lib "P42W32.DLL" Alias "_DRV429_AllocCycle@8" (ByVal numframes As Integer, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocFilt Lib "P42W32.DLL" Alias "_DRV429_AllocFilt@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocFrame Lib "P42W32.DLL" Alias "_DRV429_AllocFrame@8" (ByVal nummsgs As Integer, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocGap Lib "P42W32.DLL" Alias "_DRV429_AllocGap@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocHeader Lib "P42W32.DLL" Alias "_DRV429_AllocHeader@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocHeap Lib "P42W32.DLL" Alias "_DRV429_AllocHeap@8" (ByVal size As Integer, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocLabelTable Lib "P42W32.DLL" Alias "_DRV429_AllocLabelTable@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocMsg Lib "P42W32.DLL" Alias "_DRV429_AllocMsg@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AllocSDITable Lib "P42W32.DLL" Alias "_DRV429_AllocSDITable@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_AsciiToMant Lib "P42W32.DLL" Alias "_DRV429_AsciiToMant@12" (ByVal str As String, ByRef mant As Integer, ByRef exp As Short) As Short
    Public Declare Function DRV429_BrdNum Lib "P42W32.DLL" Alias "_DRV429_BrdNum@8" (ByVal brdnum As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_BrdStat Lib "P42W32.DLL" Alias "_DRV429_BrdStat@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Function DRV429_Check Lib "P42W32.DLL" Alias "_DRV429_Check@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_CheckChan Lib "P42W32.DLL" Alias "_DRV429_CheckChan@4" (ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_CLI Lib "P42W32.DLL" Alias "_DRV429_CLI@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_Close Lib "P42W32.DLL" Alias "_DRV429_Close@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_ClrCtrInt Lib "P42W32.DLL" Alias "_DRV429_ClrCtrInt@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_ClrDMA Lib "P42W32.DLL" Alias "_DRV429_ClrDMA@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_ClrHostInt Lib "P42W32.DLL" Alias "_DRV429_ClrHostInt@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_ClrMsgFilt Lib "P42W32.DLL" Alias "_DRV429_ClrMsgFilt@4" (ByVal handleval As Integer) As Short
    Public Declare Function DRV429_Comm Lib "P42W32.DLL" Alias "_DRV429_Comm@16" (ByVal command As Short, ByVal count As Short, ByRef value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_CommPoll Lib "P42W32.DLL" Alias "_DRV429_CommPoll@16" (ByVal command As Short, ByVal count As Short, ByRef value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_CreateMsg Lib "P42W32.DLL" Alias "_DRV429_CreateMsg@4" (ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_DecRdData Lib "P42W32.DLL" Alias "_DRV429_DecRdData@8" (ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_DecRdErr Lib "P42W32.DLL" Alias "_DRV429_DecRdErr@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_DecRdOvf Lib "P42W32.DLL" Alias "_DRV429_DecRdOvf@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_DecRdSeq Lib "P42W32.DLL" Alias "_DRV429_DecRdSeq@8" (ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_DecRdSrq Lib "P42W32.DLL" Alias "_DRV429_DecRdSrq@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_DecWrCtrl Lib "P42W32.DLL" Alias "_DRV429_DecWrCtrl@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_DecWrReset Lib "P42W32.DLL" Alias "_DRV429_DecWrReset@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Function DRV429_DfltMsg Lib "P42W32.DLL" Alias "_DRV429_DfltMsg@4" (ByVal index As Short) As String
    Public Declare Function DRV429_Div Lib "P42W32.DLL" Alias "_DRV429_Div@8" (ByVal diva As Integer, ByVal divb As Integer) As Integer
    Public Declare Function DRV429_ElapseClk Lib "P42W32.DLL" Alias "_DRV429_ElapseClk@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_EncRdOvf Lib "P42W32.DLL" Alias "_DRV429_EncRdOvf@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_EncRdSrq Lib "P42W32.DLL" Alias "_DRV429_EncRdSrq@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_EncWrCtrl Lib "P42W32.DLL" Alias "_DRV429_EncWrCtrl@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_EncWrData Lib "P42W32.DLL" Alias "_DRV429_EncWrData@12" (ByVal value As Integer, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_EncWrGap Lib "P42W32.DLL" Alias "_DRV429_EncWrGap@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_EncWrReset Lib "P42W32.DLL" Alias "_DRV429_EncWrReset@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub DRV429_EncWrSeq Lib "P42W32.DLL" Alias "_DRV429_EncWrSeq@12" (ByVal value As Integer, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Function DRV429_Error Lib "P42W32.DLL" Alias "_DRV429_Error@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_ExpandMant Lib "P42W32.DLL" Alias "_DRV429_ExpandMant@8" (ByRef mant As Integer, ByRef exp As Short)
    Public Declare Function DRV429_ExpCRC Lib "P42W32.DLL" Alias "_DRV429_ExpCRC@4" (ByVal version As Integer) As Integer
    Public Declare Function DRV429_Extern Lib "P42W32.DLL" Alias "_DRV429_Extern@8" (ByVal value As Short, ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_FileClose Lib "P42W32.DLL" Alias "_DRV429_FileClose@4" (ByVal handle As Integer)
    Public Declare Function DRV429_FileErr Lib "P42W32.DLL" Alias "_DRV429_FileErr@0" () As Integer
    Public Declare Sub DRV429_FileErrClr Lib "P42W32.DLL" Alias "_DRV429_FileErrClr@0" ()
    Public Declare Sub DRV429_FileErrSet Lib "P42W32.DLL" Alias "_DRV429_FileErrSet@0" ()
    Public Declare Function DRV429_FileOpenRead Lib "P42W32.DLL" Alias "_DRV429_FileOpenRead@4" (ByVal filename As String) As Integer
    Public Declare Function DRV429_FileOpenWrite Lib "P42W32.DLL" Alias "_DRV429_FileOpenWrite@4" (ByVal filename As String) As Integer
    Public Declare Function DRV429_FileRead Lib "P42W32.DLL" Alias "_DRV429_FileRead@12" (ByVal handle As Integer, ByRef buffer As Integer, ByVal count As Short) As Integer
    Public Declare Function DRV429_FileSeek Lib "P42W32.DLL" Alias "_DRV429_FileSeek@8" (ByVal handle As Integer, ByVal offset As Integer) As Integer
    Public Declare Function DRV429_FileTell Lib "P42W32.DLL" Alias "_DRV429_FileTell@4" (ByVal handle As Integer) As Integer
    Public Declare Function DRV429_FileWrite Lib "P42W32.DLL" Alias "_DRV429_FileWrite@12" (ByVal handle As Integer, ByRef buffer As Integer, ByVal count As Short) As Integer
    Public Declare Function DRV429_Free Lib "P42W32.DLL" Alias "_DRV429_Free@4" (ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_FreeDrv Lib "P42W32.DLL" Alias "_DRV429_FreeDrv@0" ()
    Public Declare Sub DRV429_FreeHeap Lib "P42W32.DLL" Alias "_DRV429_FreeHeap@4" (ByVal handleval As Integer)
    Public Declare Sub DRV429_Gate Lib "P42W32.DLL" Alias "_DRV429_Gate@8" (ByVal command As Short, ByVal handleval As Integer)
    Public Declare Function DRV429_GetBCDData Lib "P42W32.DLL" Alias "_DRV429_GetBCDData@12" (ByVal msg As Integer, ByVal msb As Short, ByVal lsb As Short) As Integer
    Public Declare Function DRV429_GetBCDMant Lib "P42W32.DLL" Alias "_DRV429_GetBCDMant@8" (ByVal msg As Integer, ByVal sigdig As Short) As Integer
    Public Declare Function DRV429_GetBCDSign Lib "P42W32.DLL" Alias "_DRV429_GetBCDSign@4" (ByVal msg As Integer) As Short
    Public Declare Function DRV429_GetBCDSSM Lib "P42W32.DLL" Alias "_DRV429_GetBCDSSM@4" (ByVal msg As Integer) As Short
    Public Declare Sub DRV429_GetBCDVal Lib "P42W32.DLL" Alias "_DRV429_GetBCDVal@16" (ByVal buf As String, ByVal msg As Integer, ByVal sigdig As Short, ByVal resolstr As String)
    Public Declare Function DRV429_GetBNRData Lib "P42W32.DLL" Alias "_DRV429_GetBNRData@16" (ByVal msg As Integer, ByVal msb As Short, ByVal lsb As Short, ByVal twos As Short) As Integer
    Public Declare Function DRV429_GetBNRMant Lib "P42W32.DLL" Alias "_DRV429_GetBNRMant@8" (ByVal msg As Integer, ByVal sigbit As Short) As Integer
    Public Declare Function DRV429_GetBNRSign Lib "P42W32.DLL" Alias "_DRV429_GetBNRSign@4" (ByVal msg As Integer) As Short
    Public Declare Function DRV429_GetBNRSSM Lib "P42W32.DLL" Alias "_DRV429_GetBNRSSM@4" (ByVal msg As Integer) As Short
    Public Declare Sub DRV429_GetBNRVal Lib "P42W32.DLL" Alias "_DRV429_GetBNRVal@16" (ByVal buf As String, ByVal msg As Integer, ByVal sigbit As Short, ByVal resolstr As String)
    Public Declare Function DRV429_GetFilt Lib "P42W32.DLL" Alias "_DRV429_GetFilt@16" (ByVal labelval As Short, ByVal sdival As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_GetFldData Lib "P42W32.DLL" Alias "_DRV429_GetFldData@4" (ByVal msgval As Integer) As Integer
    Public Declare Function DRV429_GetFldLabel Lib "P42W32.DLL" Alias "_DRV429_GetFldLabel@4" (ByVal msgval As Integer) As Short
    Public Declare Function DRV429_GetFldParBit Lib "P42W32.DLL" Alias "_DRV429_GetFldParBit@4" (ByVal msgval As Integer) As Integer
    Public Declare Function DRV429_GetFldParity Lib "P42W32.DLL" Alias "_DRV429_GetFldParity@4" (ByVal msgval As Integer) As Integer
    Public Declare Function DRV429_GetFldSDI Lib "P42W32.DLL" Alias "_DRV429_GetFldSDI@4" (ByVal msgval As Integer) As Integer
    Public Declare Function DRV429_GetFldValue Lib "P42W32.DLL" Alias "_DRV429_GetFldValue@12" (ByVal msgval As Integer, ByVal startbit As Integer, ByVal endbit As Integer) As Integer
    Public Declare Function DRV429_GetGap Lib "P42W32.DLL" Alias "_DRV429_GetGap@12" (ByVal index As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_GetMsg Lib "P42W32.DLL" Alias "_DRV429_GetMsg@12" (ByVal index As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function DRV429_GetMsgCnt Lib "P42W32.DLL" Alias "_DRV429_GetMsgCnt@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function DRV429_GetVersion Lib "P42W32.DLL" Alias "_DRV429_GetVersion@4" (ByVal handleval As Integer) As Short
    Public Declare Sub DRV429_Halt Lib "P42W32.DLL" Alias "_DRV429_Halt@4" (ByVal handleval As Integer)
    Public Declare Function DRV429_HandleInit Lib "P42W32.DLL" Alias "_DRV429_HandleInit@0" () As Integer
    Public Declare Function DRV429_HandleOkay Lib "P42W32.DLL" Alias "_DRV429_HandleOkay@4" (ByVal handleval As Integer) As Integer
